Entry header featured media width 100% to align correctly on xxlarge breakpoint

--- a/wp-content/themes/csisnuclearnetwork/assets/_scss/components/_entry-header.scss
+++ b/wp-content/themes/csisnuclearnetwork/assets/_scss/components/_entry-header.scss
@@ -179,7 +179,7 @@
     }
 
     .featured-media {
-      margin: 0;
+      width: 100%;
 
       @include breakpoint('large') {
         img {
